removing user.dir parameter in favor of sourcing existing common-env.sh scripts